# illuminatio

./: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-and-push.yml  ci.yml
docs/: developing.md
local_dev/: run_e2e_tests.sh  start_docker.sh
src/illuminatio/: __init__.py  illuminatio.py  illuminatio_runner.py  k8s_util.py
src/illuminatio/manifests/: runner-daemonset.yaml
tests/: test_e2e.py  test_illuminatio_runner.py  test_k8s_client_compatibility.py  test_transform_results.py
tests/assets/: containerd.yaml  containerd_custom_socket.yaml  docker.yaml
