[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "illuminatio"
dynamic = ["version"]
description = "The kubernetes network policy validator"
readme = "README.md"
authors = [
    {name = "inovex GmbH", email = "list-ito+illuminatio@inovex.de"}
]
license = {text = "Apache License 2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "*.__pycache__", "*.tests.*", "tests.*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests as e2e tests (require a running kubernetes cluster)",
    "serial"
]
addopts = "--cov illuminatio --cov-report term-missing -m \"not e2e\" --verbose"