# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html

[metadata]
name = illuminatio
description = The kubernetes network policy validator.
author = inovex GmbH
author_email = list-ito+illuminatio@inovex.de
license = apache
license_files = LICENSE
url = https://github.com/inovex/illuminatio
long_description = file: README.md
long_description_content_type = text/markdown
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# Modern setuptools syntax
setup_requires =
    setuptools>=68.0.0
    wheel>=0.40.0
# Dependencies
install_requires =
    requests>=2.31.0
    google-auth>=2.22.0
    python-dateutil>=2.8.2
    pyyaml>=6.0.1
    oauthlib>=3.2.2
    kubernetes>=28.1.0
    click>=8.1.7
    click_log>=0.4.0
    docker>=6.1.3
    nsenter>=0.2
    attrs>=23.1.0
    pluggy>=1.3.0
    urllib3>=2.0.7
    setuptools>=68.0.0
    termcolor>=2.3.0
    python-nmap>=0.7.1
# Add here test requirements
tests_require =
    pytest>=8.0.0
    pytest-cov>=4.1.0

[options.packages.find]
where = src
exclude =
    tests
    .DS_store
    resource
    .coverage

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install illuminatio[dev]`
dev =
    coverage>=7.3.2
    pytest-cov>=4.1.0

[options.entry_points]
console_scripts =
    illuminatio = illuminatio.illuminatio:cli
    illuminatio-runner = illuminatio.illuminatio_runner:cli

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
addopts =
    --cov illuminatio --cov-report term-missing -m "not e2e"
    --verbose
norecursedirs =
    dist
    build
    .tox
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    serial
    e2e: marks tests as e2e tests, (require a running kubernetes cluster)

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[flake8]
# Some sane defaults for the code style checker flake8
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.1
package = illuminatio
